# solace

./: .dockerignore  README.md  pyproject.toml  requirements.txt  setup.Dockerfile
src/solace/: main.py
src/solace/api/models/: responses.py
src/solace/api/routes/: analysis.py  chat.py
src/solace/config/: settings.py
src/solace/lib/: bot.py  redis.py
