[project]
name = "solace"
version = "0.1.0"
description = "FastAPI application for audio emotion recognition and video processing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart",  # for handling file uploads
    "opencv-python>=4.8.0",
    "torch>=2.1.0",
    "librosa>=0.10.1",
    "soundfile>=0.12.1",
    "moviepy>=1.0.3",
    "transformers>=4.36.0",  # This will pull in the correct tokenizers version
    "tokenizers>=0.22.0,<=0.23.0",  # Explicitly specify tokenizers version
    "inference>=0.9.0",  # Adjust version as needed
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/solace"]

[tool.rye]
managed = true
dev-dependencies = [
    "websockets>=12.0",  # for WebSocket testing
    "numpy>=1.24.0",     # for audio generation
]